[metadata]
name = python-rallyclient
summary = Client library for Rally API
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    rallyclient

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[compile_catalog]
directory = rallyclient/locale
domain = python-rallyclient

[update_catalog]
domain = python-rallyclient
output_dir = rallyclient/locale
input_file = rallyclient/locale/python-rallyclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = rallyclient/locale/python-rallyclient.pot
